# digital-banking-system-2

./: CMakeLists.txt  lv_conf.h
src/: main.c
src/api/: bank.db  database.c
src/api/account/: account.c  account.h
src/api/appState/: appState.c  appState.h
src/api/fingerprint/: .fingerprint.h.swp
src/api/moneyTransfer/: moneyTransfer.c  moneyTransfer.h
src/api/transaction/: transaction.c  transaction.h
src/lib/indev_backends/: evdev.c
src/ui/: CMakeLists.txt  DBS-UI.sll  DBS-UI.spj
src/ui/DBS_UI/: DBS_UI.eez-project
src/ui/DBS_UI/src/ui/: .actions.c.swp  .globals.c.swp  .globals.h.swp  actions.c  actions.h  fonts.h  globals.c  globals.h  images.c  images.h  receipt.c  receipt.h  screens.c  screens.h  types.h  ui.h  ui_font_montserrat_bold_12.c  ui_font_montserrat_bold_20.c  ui_font_montserrat_bold_28.c  ui_font_montserrat_bold_48.c  ui_font_montserrat_italic_12.c  ui_image_fingerprint_icon.c
src/ui/components/: BanKologo.ecomp
